# sdl-mandelbrot

./: CMakeLists.txt  README.md
src/: easy_sdl.cpp  main.cpp  mandelbrot.cpp
src/include/: easy_sdl.h  mandelbrot.h
